--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="stylesheet" href="style.css">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>game Website</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Welcome to the Basic Website</h1>
     <p>Click the link below to play a Tic-Tac-Toe game:</p>
     <a href="tic-tac-toe.html">Play Tic-Tac-Toe</a>
-</body>
+  </body>
 </html>
