minorly fixed previous code

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>game Website</title>
+    <title>Game Website</title>
   </head>
   <body>
-    <h1>Welcome to the Basic Website</h1>
+    <h1>Welcome to the Game Studio</h1>
     <p>Click the link below to play a Tic-Tac-Toe game:</p>
     <a href="tic-tac-toe.html">Play Tic-Tac-Toe</a>
+    <p>Click the link below to play a Hangman game:</p>
+    <a href="hangman.html">Play Hangman</a>
   </body>
 </html>
