--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <h1>Tic-Tac-Toe</h1>
-    <div id="board"></div>
-    <div class="winner" id="winner"></div>
+    <section id="board"></section>
+    <section class="winner" id="winner"></section>
     <script src="javascript.js"></script>
   </body>
 </html>
