--- a/hangman.html
+++ b/hangman.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hangman Game</title>
-    <body>
-      <h1>Hangman Game</h1>
-      <div class="word" id="word">_ _ _ _ _</div>
-      <div class="guessed-letters" id="guessed-letters">Guessed Letters:</div>
-      <div class="remaining-attempts" id="remaining-attempts">
-        Remaining Attempts: 6
-      </div>
-      <div class="message" id="message"></div>
-      <div class="letter-input">
-        <input type="text" id="letter" maxlength="1" />
-        <button onclick="guessLetter()">Guess</button>
-      </div>
-    </body>
-  </head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hangman Game</title>
+  <link rel="stylesheet" href="style.css">
+  <body>
+    <h1>Hangman Game</h1>
+    <section class="word" id="word">_ _ _ _ _</section>
+    <section class="guessed-letters" id="guessed-letters">Guessed Letters:</section>
+    <section class="remaining-attempts" id="remaining-attempts">
+      Remaining Attempts: 6
+    </section>
+    <section class="message" id="message"></section>
+    <section class="letter-input">
+      <input type="text" id="letter" maxlength="1" />
+      <button onclick="guessLetter()">Guess</button>
+    </section>
+    <script src="javascript2.js"></script>
+  </body>
 </html>
