fixed connection to javascript and improved comment placement

--- a/hangman.html
+++ b/hangman.html
@@ -16,6 +16,6 @@
       <input type="text" id="letter" maxlength="1" />
       <button onclick="guessLetter()">Guess</button>
     </section>
-    <script src="javascript2.js"></script>
+    <script src="hangman.js"></script>
   </body>
 </html>
