--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -10,6 +10,6 @@
     <h1>Tic-Tac-Toe</h1>
     <section id="board"></section>
     <section class="winner" id="winner"></section>
-    <script src="javascript.js"></script>
+    <script src="tic-tac-toe.js"></script>
   </body>
 </html>
