added links back to the original page

--- a/hangman.html
+++ b/hangman.html
@@ -16,6 +16,8 @@
       <input type="text" id="letter" maxlength="1" />
       <button onclick="guessLetter()">Guess</button>
     </section>
+    <p>Click the link below to go to main page:</p>
+    <a href="index.html">Game Website</a>
     <script src="hangman.js"></script>
   </body>
 </html>
