--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -10,6 +10,8 @@
     <h1>Tic-Tac-Toe</h1>
     <section id="board"></section>
     <section class="winner" id="winner"></section>
+    <p>Click the link below to go to main page:</p>
+    <a href="index.html">Game Website</a>
     <script src="tic-tac-toe.js"></script>
   </body>
 </html>
